--- a/src/components/AboutSection3.module.css
+++ b/src/components/AboutSection3.module.css
@@ -5,7 +5,7 @@
   max-width: 100%;
 }
 .frameParent {
-  width: 90.5729vw;
+  width: 89.5833vw;
   flex-direction: column;
   padding: var(--padding-0) var(--padding-20) 4.2188vw var(--padding-0);
   box-sizing: border-box;
@@ -23,16 +23,17 @@
 .frameChild,
 .frameItem {
   height: var(--height-1);
-  flex: 1;
   position: relative;
   border-top: var(--border-1);
   box-sizing: border-box;
   opacity: var(--opacity-0_5);
-  max-width: calc(100% - 45.8333vw);
   z-index: 1;
 }
+.frameChild {
+  width: 57.9688vw;
+}
 .frameItem {
-  max-width: calc(100% - 45.8854vw);
+  width: 32.1875vw;
 }
 .frameWrapper {
   width: 85.2604vw;
@@ -75,6 +76,7 @@
   text-transform: uppercase;
   font-weight: 800;
   font-family: var(--font-winter-sans-trial);
+  -webkit-text-stroke: 2px currentColor;
   display: inline-block;
 }
 .frameInner {
@@ -84,6 +86,7 @@
   box-sizing: border-box;
   opacity: var(--opacity-0_5);
   z-index: 1;
+  align-self: flex-start;
 }
 .group {
   height: var(--height-92);
@@ -107,6 +110,7 @@
   text-transform: uppercase;
   font-weight: 800;
   font-family: inherit;
+  -webkit-text-stroke: 2px currentColor;
 }
 .div2 {
   width: 5.5729vw;
