--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -79,11 +79,11 @@
   flex-shrink: 0;
 }
 .frameGroup {
-  width: 1840px;
+  width: 100vw;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  padding: var(--padding-0) var(--padding-0) 43px var(--padding-20);
+  align-items: center;
+  padding: var(--padding-0) var(--padding-20) 43px;
   gap: 19px;
   max-width: 100%;
 }
